JBTM-3601:Remove references to the Java SE ORB for JDK 11+