@@ -26,10 +26,6 @@
   <properties>
     <openjdk-orb.jar>${settings.localRepository}/org/jboss/openjdk-orb/openjdk-orb/${version.org.jboss.openjdk-orb}/openjdk-orb-${version.org.jboss.openjdk-orb}.jar</openjdk-orb.jar>
     <idlj.boot.args/>
-    <java.corba.patch.name>idlj.java.corba.patch</java.corba.patch.name>
-    <java.corba.patch.jar>${project.build.directory}/dependency/${java.corba.patch.name}-${project.version}.jar</java.corba.patch.jar>
-    <idlj.jdk9.args/>
-    <jacorb.jdk9.args/>
     <surefireArgLine/>
   </properties>
 
@@ -152,63 +148,6 @@
   
   <profiles>
     <profile>
-      <id>jts-jacorb-jdk9</id>
-      <activation>
-        <property>
-          <name>!jacorb-disabled</name>
-        </property>
-        <jdk>[1.9, 11)</jdk>
-      </activation>
-      <properties>
-        <maven.compiler.source>1.9</maven.compiler.source>
-        <maven.compiler.target>1.9</maven.compiler.target>
-        <jacorb.jdk9.args>
-          --add-modules java.corba
-          --patch-module java.corba=${project.build.directory}/java9-jacorb/jacorb-omgapi-${version.org.jacorb.jacorb}.jar
-          --add-exports=java.corba/org.omg.CORBA_2_5=ALL-UNNAMED
-          --add-exports=java.corba/org.omg.CONV_FRAME=ALL-UNNAMED
-          --add-exports=java.corba/org.omg.CSIIOP=ALL-UNNAMED
-          --add-exports=java.corba/org.omg.ETF=ALL-UNNAMED
-          --add-exports=java.corba/org.omg.GIOP=ALL-UNNAMED
-          --add-exports=java.corba/org.omg.PortableGroup=ALL-UNNAMED
-          --add-exports=java.corba/org.omg.SSLIOP=ALL-UNNAMED
-        </jacorb.jdk9.args>
-      </properties>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>jacorb-compile</id>
-                <goals>
-                  <goal>compile</goal>
-                </goals>
-                <configuration>
-                  <compilerArgs>
-                    <arg>--add-modules</arg>
-                    <arg>java.corba</arg>
-                  </compilerArgs>
-                </configuration>
-              </execution>
-              <execution>
-                <id>jacorb-testCompile</id>
-                <goals>
-                  <goal>testCompile</goal>
-                </goals>
-                <configuration>
-                  <compilerArgs>
-                    <arg>--add-modules</arg>
-                    <arg>java.corba</arg>
-                  </compilerArgs>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
       <id>jts-jacorb</id>
       <activation>
         <property>
@@ -279,7 +218,7 @@
                   <goal>test</goal>
                 </goals>
                 <configuration>
-                  <argLine>@{surefireArgLine} -Djdk.attach.allowAttachSelf=true ${jacorb.jdk9.args}</argLine>
+                  <argLine>@{surefireArgLine} -Djdk.attach.allowAttachSelf=true</argLine>
                   <reportsDirectory>${project.build.directory}/jacorb-surefire-reports</reportsDirectory>
                   <systemProperties combine.children="append"/>
                   <excludes>
@@ -370,7 +309,7 @@
                   <goal>test</goal>
                 </goals>
                 <configuration>
-                  <argLine>@{surefireArgLine} -Djdk.attach.allowAttachSelf=true ${idlj.jdk9.args}</argLine>
+                  <argLine>@{surefireArgLine} -Djdk.attach.allowAttachSelf=true</argLine>
                   <reportsDirectory>${project.build.directory}/idlj-surefire-reports</reportsDirectory>
                   <systemProperties combine.children="append" />
                   <excludes>
@@ -468,7 +407,7 @@
                   <goal>test</goal>
                 </goals>
                 <configuration>
-                  <argLine>@{surefireArgLine} -Djdk.attach.allowAttachSelf=true ${idlj.jdk9.args} ${idlj.boot.args}</argLine>
+                  <argLine>@{surefireArgLine} -Djdk.attach.allowAttachSelf=true ${idlj.boot.args}</argLine>
                   <systemProperties combine.children="append" />
                   <excludes>
                     <exclude>**/common/**</exclude>
